# libbsarch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cpp.hint  libbsarch-visualstudio-test.cpp  libbsarch-visualstudio-test.vcxproj  libbsarch-visualstudio-test.vcxproj.filters  libbsarch.cpp  libbsarch.def  libbsarch.dpr  libbsarch.dproj  libbsarch.h  libbsarch.sln  libbsarch.vcxproj  libbsarch.vcxproj.filters  wbBSArchive.pas
delphi/: libbsarch.dpr  libbsarch.dproj  wbBSArchive.pas
examples/: libbsarch-visualstudio-test.sln
src/: base_types.hpp  bs_archive.cpp  bs_archive.h  bs_archive_auto.cpp  bs_archive_auto.hpp  bs_archive_entries.cpp  bs_archive_entries.h  dds.h  libbsarch.cpp  libbsarch.h  libbsarch.hpp
src/utils/: convertible_ostream.cpp  convertible_ostream.hpp  convertible_string.cpp  convertible_string.hpp  string_convert.cpp  string_convert.hpp
